--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -49,7 +49,7 @@
             </div>
         </section>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/js/frontend.js"></script>
 </body>
 </html>
