--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <li><a href="/chat"><i class="fas fa-comments"></i> Chat with ChatGPT</a></li>
             <li><a href="/dashboard"><i class="fas fa-chart-line"></i> Dashboard</a></li>
             <li><a href="/notifications"><i class="fas fa-bell"></i> Notifications</a></li>
-            <li><a href="/login"><i class="fas fa-user"></i> Login/Signup</a></li>
+            <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
             <li><a href="/about"><i class="fas fa-info-circle"></i> About Us</a></li>
             <li><a href="/contact"><i class="fas fa-envelope"></i> Contact Us</a></li>
         </ul>
