--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1294,3 +1294,29 @@ button:active {
     width: 100%;
     height: 400px;
 }
+
+
+.icons-container {
+    display: flex;
+    justify-content: flex-end; /* Align icons to the right */
+    gap: 10px; /* Add spacing between icons */
+    margin-top: 10px; /* Add some space above the icons */
+}
+
+.icons-container i {
+    font-size: 16px; /* Icon size */
+    cursor: pointer; /* Pointer cursor on hover */
+    transition: color 0.3s ease;
+}
+
+.icons-container i:hover {
+    color: #000; /* Change color on hover */
+}
+
+#trash-icon {
+    color: rgb(207, 5, 5); /* Specific color for the trash icon */
+}
+
+#star-icon {
+    color: gold; /* Specific color for the star icon */
+}
